--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,62 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRestaurants"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbMain"
+        tools:layout_editor_absoluteX="1dp" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tbMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/etSearchBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/border_white"
+        android:hint="Enter search term eg: breakfast"
+        android:inputType="text"
+        android:maxWidth="200dp"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@+id/rvRestaurants"
+        app:layout_constraintStart_toStartOf="@+id/tbMain"
+        app:layout_constraintTop_toTopOf="@+id/tbMain"
+        app:layout_constraintWidth_percent="0.8" />
+
+    <ImageButton
+        android:id="@+id/ibFilterMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#ff6750a4"
+        android:foregroundTint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/rvRestaurants"
+        app:layout_constraintEnd_toEndOf="@+id/tbMain"
+        app:layout_constraintTop_toTopOf="@+id/tbMain"
+        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+        app:tint="@color/white" />
+
+    <!--    <SearchView-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginStart="32dp"-->
+<!--        android:background="@drawable/drawable_search_background"-->
+<!--        android:iconifiedByDefault="false"-->
+<!--        android:searchIcon="@null"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/tbMain"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/tbMain" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
