--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColorHint="@android:color/darker_gray"
+        android:imeOptions="actionSearch"
         app:layout_constraintBottom_toTopOf="@+id/rvRestaurants"
         app:layout_constraintStart_toStartOf="@+id/tbMain"
         app:layout_constraintTop_toTopOf="@+id/tbMain"
